# framecount_element_gst_0.10

./: LICENSE  NOTES.paul
gst-plugin/: configure.ac
gst-plugin/src/: Makefile.am  gstframecount.c  gstframecount.h
